# lab08

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  README.md
.github/workflows/: build.yml
formatter_ex_lib/: CMakeLists.txt  formatter.h  formatter_ex.cpp
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
tests/: print.cpp  print.hpp  test1.cpp
